force-app/main/default/objects/Account/Account.object-meta.xml
<CustomObject>
    
    <historyRetentionPolicy>
        <archiveAfterMonths>6</archiveAfterMonths>
        <archiveRetentionYears>5</archiveRetentionYears>
        <description>My field history retention</description>
    </historyRetentionPolicy>

    <sharingModel>ReadWrite</sharingModel>
</CustomObject>