force-app/main/default/objects/Account/fields/Language_Known__c.field-meta.xml
<CustomField>
    <fullName>Language_Known__c</fullName>
    <label>Language Known</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JAVA</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>APEX</fullName>
            </value>
            <value>
                <fullName>HTML</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>