force-app/main/default/objects/Account/fields/Phone_Number_EXT__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_EXT__c</fullName>
    <externalId>true</externalId>
    <label>Phone Number EXT</label>
    <length>18</length>
    <type>Text</type>
</CustomField>