force-app/main/default/objects/Account/fields/Summerize_Test__c.field-meta.xml
<CustomField>
    <fullName>Summerize_Test__c</fullName>
    <label>Summerize Test</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>